# GRIT

./: .gitignore  main.py  pyproject.toml  requirements.txt
datasets/: colored_mnist.py
scripts/: coloredMNIST_preprocess.py
scripts/workshop_coloredmnist/: README.md  aggregate_results.py  run_experiments.py
solver/: __init__.py  ecmp.py  invariant_l2_kernel.py  kernel_grit.py
